<resources>
    <string name="app_name">CanShop</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="advertising_outdoors">Advertising Outdoors</string>
    <string name="many_people_sign_up_for_affiliate_programs_with_the_hopes_of_making_some_serious_money_they_advertise_a_few_places_and_then_wait_for_the_money">Many people sign up for affiliate programs with the hopes of making some serious money. They advertise a few places and then wait for the money</string>
    <string name="trade_show_promotions">Trade Show Promotions</string>
    <string name="get_your_order">Get Your Order</string>
    <string name="get_started">Get Started</string>
    <string name="skip">Skip</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register_now">Register Now</string>
    <string name="i_agree_with_terms_an_uses">I agree with terms an uses</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="reset_here">Reset Here</string>
    <string name="home"><u>Home</u></string>
    <string name="about"><u>About</u></string>
    <string name="terms"><u>Terms</u></string>
    <string name="contact"><u>Contact</u></string>
    <string name="type_search">Type Search…</string>
    <string name="best_sale">Best Sale</string>
    <string name="new_txt"><![CDATA[& New]]></string>
    <string name="left_quote">(</string>
    <string name="_230">230</string>
    <string name="product">Product</string>
    <string name="right_quote">)</string>
    <string name="can_shop_how_work">Can Shop how work</string>
    <string name="about_description">When you browse through videos at YouTube, which do you usually click first: one with around 10 views or one with around 75,000 views? If you’re normal, then you’re much more likely to click on YouTube videos that have a lot of clicks already. The logic is simple. The more views a video has, the more interesting the video must be. After all, why would a video gain so many views if it’s dull or uninteresting, right? Indeed, the bandwagon mentality works very well at YouTube – so why not use it to market your videos at YouTube?</string>
    <string name="_320">$320</string>
    <string name="sales_name">Sale Name</string>
    <string name="sale_type">Sale Type</string>
    <string name="my_profile">My profile</string>
    <string name="last_log">Last Log</string>
    <string name="my_order">My Order</string>
    <string name="favorite">Favorite</string>
    <string name="doller_sign">K.D</string>
    <string name="order_name">order name</string>
    <string name="date_example">18 Apr 2018</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="basic_information">Basic Information</string>
    <string name="address">Address</string>
    <string name="country">Country</string>
    <string name="fullName">Full Name</string>
    <string name="phone">Phone</string>
    <string name="save_edit">Save Edit</string>
    <string name="checkout">Checkout</string>
    <string name="next">Next</string>
    <string name="total_price">Total Price</string>
    <string name="seller">Seller</string>
    <string name="confrontation">Confrontation</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="line_total">Line Total</string>
    <string name="_1">1</string>
    <string name="category">Categories</string>
    <string name="no_internet_connection">No intenet found</string>
    <string name="this_filed_required">This field is required</string>
    <string name="password_should_be_6_characters">Password length at least 6 characters</string>
    <string name="service_condition">Terms and Conditions</string>
    <string name="agree">Agree</string>
    <string name="agree_of_terms">You should agree the terms and condition</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="info">Information</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="something_wrong">Something worng</string>
    <string name="logOut"><u>Logout</u></string>
    <string name="select_language">Select Language</string>
    <string name="english">English</string>
    <string name="arabic">العربية</string>
    <string name="language"><u>Language:</u></string>
    <string name="loading">Loading....</string>
    <string name="no_orders">Don\'t have orders</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="add_to_your_cart_successfully">Added to your cart Successfully</string>
    <string name="update_product_successfully">Updated product Successfully</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="do_you_need_add">Do you want add this product to your cart?</string>
    <string name="company">Company</string>
    <string name="address_1">Address 1</string>
    <string name="address_2">Address 2</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="postcode">Postcode</string>
    <string name="kuwait">Kuwait</string>
    <string name="done">Done</string>
    <string name="invoice_date">Invoice Date</string>
    <string name="order_amount_kwd">Order Amount (KWD)</string>
    <string name="your_cart_not_has_any_product">Your cart is empty, don\'t has any product!</string>
    <string name="delet_product">Delete product</string>
    <string name="do_you_need_to_delete">Do you need delete this product from your cart?</string>
    <string name="write_here">Write here....</string>
    <string name="error_">Error:</string>
    <string name="order_number">Order number:</string>
    <string name="order">Order</string>
    <string name="best_offer">Best offer</string>
    <string name="lastes_product">Latest product</string>
    <string name="donot_have_product">Don\'t have product</string>
    <string name="delivery_price">Delivery price:</string>
    <string name="this_product_is_out_stock">This product is out of stock</string>
</resources>
