<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@null">

    <RelativeLayout
        android:id="@+id/headLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:fontFamily="@font/cairo_bold"
            android:text="@string/my_order"
            android:textColor="@color/colorHead"
            android:textSize="20sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/txt"
            android:visibility="gone">

            <TextView
                android:id="@+id/leftTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cairo_regular"
                android:text="@string/left_quote"
                android:textColor="@color/colorHead"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/productNoTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/leftTxt"
                android:fontFamily="@font/cairo_regular"
                android:text="@string/_230"
                android:textColor="@color/colorHead"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/productTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/productNoTxt"
                android:fontFamily="@font/cairo_regular"
                android:text="@string/order"
                android:textColor="@color/colorHead"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/rightTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/productTxt"
                android:fontFamily="@font/cairo_regular"
                android:text="@string/right_quote"
                android:textColor="@color/colorHead"
                android:textSize="10sp"
                tools:ignore="SmallSp" />
        </RelativeLayout>
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/headLayout"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp" />

    <TextView
        android:id="@+id/noDataTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="@font/cairo_bold"
        android:text="@string/no_orders"
        android:textColor="@color/colorHead"
        android:textSize="20sp"
        android:visibility="gone" />
</RelativeLayout>