<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="-3dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:src="@drawable/second_img" />

    <TextView
        android:id="@+id/headTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/cairo_bold"
        android:gravity="center"
        android:text="@string/trade_show_promotions"
        android:textColor="@color/colorHead"
        android:textSize="25sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headTxt"
        android:layout_margin="20dp"
        android:fontFamily="@font/cairo_regular"
        android:gravity="center"
        android:text="@string/many_people_sign_up_for_affiliate_programs_with_the_hopes_of_making_some_serious_money_they_advertise_a_few_places_and_then_wait_for_the_money"
        android:textColor="@color/colorAccent"
        android:textSize="15sp"
        android:visibility="gone" />

</RelativeLayout>