<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".fragment.HomeFragment">

    <TextView
        android:id="@+id/searchEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_white_border"
        android:drawableEnd="@drawable/ic_search"
        android:drawablePadding="5dp"
        android:fontFamily="@font/cairo_regular"
        android:hint="@string/type_search"
        android:padding="10dp"
        android:textColor="#A8A8A8"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/offerTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/searchEditText"
        android:layout_margin="10dp"
        android:fontFamily="@font/cairo_light"
        android:text="@string/best_offer"
        android:textColor="@color/colorHead"
        android:textSize="20sp"
        android:visibility="gone" />


    <RelativeLayout
        android:id="@+id/offerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/offerTxt">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/offerRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/progressBar1" />

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/saleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/offerLayout"
        android:layout_margin="10dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/bestTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo_light"
            android:text="@string/lastes_product"
            android:textColor="@color/colorHead"
            android:textSize="20sp" />


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/bestTxt"
            android:visibility="gone">

            <TextView
                android:id="@+id/leftTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cairo_regular"
                android:text="@string/left_quote"
                android:textColor="@color/colorHead"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/productNoTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/leftTxt"
                android:fontFamily="@font/cairo_regular"
                android:text="@string/_230"
                android:textColor="@color/colorHead"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/productTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/productNoTxt"
                android:fontFamily="@font/cairo_regular"
                android:text="@string/product"
                android:textColor="@color/colorHead"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/rightTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/productTxt"
                android:fontFamily="@font/cairo_regular"
                android:text="@string/right_quote"
                android:textColor="@color/colorHead"
                android:textSize="10sp"
                tools:ignore="SmallSp" />
        </RelativeLayout>
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/salesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/progressBar"
        android:layout_below="@+id/saleLayout"
        android:layout_marginStart="10dp" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />
    <!--</RelativeLayout>-->
    <!--</ScrollView>-->

</RelativeLayout>