<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:background="@color/colorWhite"
    tools:context=".fragment.SignUpFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/usernameWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/usernameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_user"
                android:fontFamily="@font/cairo_regular"
                android:hint="@string/username"
                android:inputType="text"
                android:padding="10dp"
                android:textSize="15sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/usernameWrapper">

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_email"
                android:fontFamily="@font/cairo_regular"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textSize="15sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailWrapper">

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_password"
                android:fontFamily="@font/cairo_regular"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textSize="15sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/confirmPassWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passwordWrapper">

            <EditText
                android:id="@+id/confirmPassEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_password"
                android:fontFamily="@font/cairo_regular"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textSize="15sp" />

        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/checkboxTerm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/confirmPassWrapper"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/cairo_regular"
            android:text="@string/i_agree_with_terms_an_uses"
            android:textColor="@color/colorHead"
            android:textSize="16sp" />

        <Button
            android:id="@+id/registerBtn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkboxTerm"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_btn_gardian"
            android:fontFamily="@font/cairo_light"
            android:text="@string/register_now"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />
    </RelativeLayout>
</ScrollView>