<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:background="@color/colorWhite"
    tools:context=".fragment.SignUpFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/usernameWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/usernameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_user"
                android:fontFamily="@font/cairo_regular"
                android:hint="@string/username"
                android:inputType="text"
                android:padding="10dp"
                android:textSize="15sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/usernameWrapper">

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_password"
                android:fontFamily="@font/cairo_regular"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textSize="15sp" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/signInButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passwordWrapper"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_btn_gardian"
            android:fontFamily="@font/cairo_light"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

        <RelativeLayout
            android:id="@+id/forgetLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signInButton"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cairo_light"
                android:text="@string/forgot_password"
                android:textColor="@color/colorHead"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/reset_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/forget_password"
                android:fontFamily="@font/cairo_bold"
                android:text="@string/reset_here"
                android:textColor="@color/colorHead"
                android:textSize="16sp"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>